[package]
name = "scenarios"
version = "0.2.0"
authors = ["Nico Madysa <nico.madysa@tu-dresden.de>"]
description = "Run a command line multiple times in different environments."

[dependencies]
clap = { version = "*", default-features = false, features = ["wrap_help"] }
failure = "*"
glob = "*"
num_cpus = "*"
